<resources>
    <string name="app_name">GoFish</string>
    <string name="homepage">主页</string>
    <string name="message">消息</string>
    <string name="favorite">收藏夹</string>
    <string name="me">我</string>
    <string name="meIssue">我发布的</string>
    <string name="meRentOut">我租出的</string>
    <string name="meRentIn">我租到的</string>
    <string name="meLike">我收藏的</string>
    <string name="meSetting">设置</string>
    <string name="meName">昵称</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
